--- a/others/Makefile
+++ b/others/Makefile
@@ -1,7 +1,7 @@
 all: VMEmulator  CPUEmulator
 
 CPUEmulator: CPUEmulator.cpp ../ASMParser.h ../ASMSymbolTable.h ../Code.h
-	g++ -W -Wall -std=c++11 $< -o $@
+	g++ -Wall -std=c++11 $< -o $@
 
 VMEmulator: VMEmulator.cpp ../VMParser.h
 	g++ -Wall -std=c++11 $< -o $@
